# feosynth

./: Cargo.toml
src/: adsr.rs  audio.rs  lib.rs  main.rs  midi.rs  oscillator.rs  temperament.rs  types.rs
