[package]
name = "feosynth"
version = "0.1.0"
authors = ["dctucker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
cpal = "0.12.1"
lazy_static = "1.4.0"
rand = "0.7.3"
midir = "0.6.2"
crossbeam = "0.4.1"
midi = "0.1.0"
